Revision history for Dancer2-Plugin-Auth-OAuth

{{$NEXT}}

0.04  2014-12-29 19:02:52 CET
        - fixed undef `base' setting

0.03  2014-10-20 08:58:46 CEST
        - Test-only changes

0.02  2014-10-10 22:37:45 CEST
        - Stringifying JSON booleans now as to not upset the session storage
        - Added Twitter user_info support

0.01  2014-10-09 08:53:07 CEST
        - Initial release